--- a/models/sources.yml
+++ b/models/sources.yml
@@ -39,3 +39,27 @@ sources:
           warn_after: {count: 6, period: hour}
           error_after: {count: 12, period: hour}
         loaded_at_field: _batched_at
+
+
+  - name: learn_stripe
+    database: raw
+    schema: learn_stripe
+    freshness: # default freshness
+      warn_after: {count: 12, period: hour}
+      error_after: {count: 24, period: hour}
+
+    tables:
+      - name: charges
+      - name: refunds
+
+
+
+  - name: ticket_tailor
+    database: raw
+    schema: ticket_tailor
+    freshness: # default freshness
+      warn_after: {count: 12, period: hour}
+      error_after: {count: 24, period: hour}
+
+    tables:
+      - name: orders
